# NFL-combine-for-AI

./: README.md  pyproject.toml
.github/workflows/: benchmark-smoke.yml  ci.yml  manifest-ingestion.yml  mini-eval-smoke.yml
benchmarks/: __init__.py  artifact_smoke.py  cli.py  datasets.py  metrics.py  models.py  reporting.py  runner.py  telemetry.py
configs/: benchmark.sample.json
configs/datasets/: arc_easy.sample.jsonl  hellaswag.sample.jsonl  lambada.sample.jsonl  piqa.sample.jsonl  wikitext2.sample.jsonl
configs/manifests/: gguf.sample.json  grok_planning.sample.json  safetensors_hf.sample.json
docs/: ARCHITECTURE.md
scripts/: benchmark.py  run_artifact_smoke.py  run_smoke_benchmark.py  run_smoke_benchmark.sh
src/nfl_combine_for_ai/: __init__.py  manifest.py
tests/: test_artifact_smoke.py  test_manifest.py  test_smoke.py  test_telemetry.py
tests/fixtures/: corinth_canal.sample.json  myelin_accelerator.sample.json
