[project]
name = "nfl-combine-for-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bot", email = "montoyaraul34@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "msgspec>=0.21.1",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
nfl-combine-for-ai = "nfl_combine_for_ai:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
